--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">MapNew</string>
+    <string name="bienvenido">Bienvenido</string>
     <string name="action_settings">Settings</string>
+    <string name="button">Iniciar</string>
     <string name="ipDB">192.168.0.5</string>
     <string name="portDB">3306</string>
     <string name="passDB">kevin</string>
